fix overflow bugs on results card

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,7 @@
   min-width: 100vw;
 
   display: grid;
-  grid-template-rows: 1fr 4fr 4fr;
+  grid-template-rows: 1fr 4fr 5fr;
   grid-row-gap: 10px;
   grid-template-columns: repeat(12, 1fr);
 
