--- a/src/Components/Main/Results/ResultsCard.module.css
+++ b/src/Components/Main/Results/ResultsCard.module.css
@@ -11,13 +11,16 @@
 }
 
 .wrapper {
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 2fr 6fr 1fr;
+  grid-template-rows: 2fr 7fr 1fr;
 }
 .title {
   grid-column: 1 / -1;
   margin: 1% 5%;
+  margin-bottom: 2%;
 }
 
 .title p a:link,
@@ -46,45 +49,32 @@
   display: flex;
   flex-direction: column;
 }
-.chart-card-title{
-    font-size: 0.9rem;
-    margin-left: 5px;
-    margin-bottom: 1px;
+.chart-card-title {
+  font-size: 0.9rem;
+  margin-left: 5px;
+  margin-bottom: 1px;
 }
 
-.img-wrapper{
-    flex: 0 0 50%;
- 
+.img-wrapper {
+  flex: 0 0 50%;
 }
-/* .img-div-1{
-    width: 100%;
-    height: 100%;
-    background-image: url(../../../Assets/Images/chart1.png);
-    background-size: auto;
+
+.img-div-3 {
+  width: 100%;
+  height: 100%;
+  background-image: url(../../../Assets/Images/pie-chart-illus.png);
+  background-size: cover;
 }
-.img-div-2{
-    width: 100%;
-    height: 100%;
-    background-image: url(../../../Assets/Images/chart2.png);
-    background-size: auto;
+.img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-*/
-.img-div-3{
-    width: 100%;
-    height: 100%;
-    background-image: url(../../../Assets/Images/pie-chart-illus.png);
-    background-size: cover;
+.info-box {
+  padding: 2px 8px;
 }
-.img-wrapper img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.info-box{
-    padding: 2px 8px;
-}
-.info-box p{
-    font-weight: 700;
+.info-box p {
+  font-weight: 700;
 }
 
 .options {
